RESOLVED FIXED111597
WebKit does not build without accelerated compositing after Changeset 144823
https://bugs.webkit.org/show_bug.cgi?id=111597
Summary WebKit does not build without accelerated compositing after Changeset 144823
tuxator
Reported 2013-03-06 10:33:43 PST
WebKit does not build without accelerated compositing after Changeset 144823
Attachments
Patch (2.43 KB, patch)
2013-03-06 10:35 PST, tuxator
no flags
Fixed style issue (2.43 KB, patch)
2013-03-06 21:12 PST, tuxator
no flags
tuxator
Comment 1 2013-03-06 10:35:59 PST
tuxator
Comment 2 2013-03-06 10:38:27 PST
Build error Source/WebCore/page/scrolling/ScrollingCoordinator.cpp:297:108: error: no 'WebCore::GraphicsLayer* WebCore::ScrollingCoordinator::verticalScrollbarLayerForScrollableArea(WebCore::ScrollableArea*)' member function declared in class 'WebCore::ScrollingCoordinator' make[1]: *** [Source/WebCore/page/scrolling/libWebCore_la-ScrollingCoordinator.lo] Błąd 1 make[1]: Opuszczenie katalogu `/home/pawel/src/webkit' make: *** [all] Błąd 2 Changeset http://trac.webkit.org/changeset/144823 added ifdef to ScrollingCoordinator.h and ScrollingCoordinator.cpp But turns out they dont match. Additionally it makes guards and fallback code introduced in changeset http://trac.webkit.org/changeset/144799 redundant. Attached patch should adress those.
WebKit Review Bot
Comment 3 2013-03-06 10:41:29 PST
Attachment 191788 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCore/page/scrolling/ScrollingCoordinator.cpp']" exit_code: 1 Source/WebCore/ChangeLog:9: Line contains tab character. [whitespace/tab] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Alexey Proskuryakov
Comment 4 2013-03-06 16:57:45 PST
Comment on attachment 191788 [details] Patch Obviously, the tab in ChangeLog needs to be fixed before landing.
tuxator
Comment 5 2013-03-06 21:12:55 PST
Created attachment 191910 [details] Fixed style issue
Kentaro Hara
Comment 6 2013-03-06 22:27:41 PST
Comment on attachment 191910 [details] Fixed style issue Thanks for the fix.
WebKit Review Bot
Comment 7 2013-03-06 22:49:28 PST
Comment on attachment 191910 [details] Fixed style issue Clearing flags on attachment: 191910 Committed r145041: <http://trac.webkit.org/changeset/145041>
WebKit Review Bot
Comment 8 2013-03-06 22:49:32 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.