WebKit does not build without accelerated compositing after Changeset 144823 https://bugs.webkit.org/show_bug.cgi?id=111597

Patch by Paweł Forysiuk <tuxator@o2.pl> on 2013-03-06
Reviewed by Kentaro Hara.

Properly guard functions ifdefed in ScrollingCoordinator.h.
Remove redundant checks and fallback code inside those functions.

* page/scrolling/ScrollingCoordinator.cpp:
(WebCore::ScrollingCoordinator::scrollLayerForScrollableArea):
(WebCore::ScrollingCoordinator::horizontalScrollbarLayerForScrollableArea):
(WebCore::ScrollingCoordinator::verticalScrollbarLayerForScrollableArea):
(WebCore):

Canonical link: https://commits.webkit.org/130045@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@145041 268f45cc-cd09-0410-ab3c-d52691b4dbfc