Source/WebCore/page/scrolling/ScrollingCoordinator.cpp
@@ -275,34 +275,19 @@ void ScrollingCoordinator::frameViewFixedObjectsDidChange(FrameView* frameView)
 #if USE(ACCELERATED_COMPOSITING)
 GraphicsLayer* ScrollingCoordinator::scrollLayerForScrollableArea(ScrollableArea* scrollableArea)
 {
-#if USE(ACCELERATED_COMPOSITING)
     return scrollableArea->layerForScrolling();
-#else
-    UNUSED_PARAM(scrollableArea);
-    return 0;
-#endif
 }
 
 GraphicsLayer* ScrollingCoordinator::horizontalScrollbarLayerForScrollableArea(ScrollableArea* scrollableArea)
 {
-#if USE(ACCELERATED_COMPOSITING)
     return scrollableArea->layerForHorizontalScrollbar();
-#else
-    UNUSED_PARAM(scrollableArea);
-    return 0;
-#endif
 }
-#endif
 
 GraphicsLayer* ScrollingCoordinator::verticalScrollbarLayerForScrollableArea(ScrollableArea* scrollableArea)
 {
-#if USE(ACCELERATED_COMPOSITING)
     return scrollableArea->layerForVerticalScrollbar();
-#else
-    UNUSED_PARAM(scrollableArea);
-    return 0;
-#endif
 }
+#endif
 
 GraphicsLayer* ScrollingCoordinator::scrollLayerForFrameView(FrameView* frameView)
 {
